[gd_scene load_steps=2 format=3 uid="uid://uldfkfgyhixc"]

[ext_resource type="Script" path="res://Cenas/control.gd" id="1_46tu2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46tu2")

[node name="Key_3" type="Label" parent="."]
offset_left = 27.0
offset_top = -131.0
offset_right = 67.0
offset_bottom = -108.0
text = "0"

[node name="Key_1" type="Label" parent="."]
offset_left = -40.0
offset_top = -131.0
offset_bottom = -108.0
text = "0"

[node name="Chave" type="Label" parent="."]
offset_left = -27.0
offset_top = -164.0
offset_right = 28.0
offset_bottom = -141.0
text = "Waiting...
"

[node name="Key_2" type="Label" parent="."]
offset_left = -8.0
offset_top = -131.0
offset_right = 32.0
offset_bottom = -108.0
text = "0"

[node name="but_2" type="TextureButton" parent="."]
offset_left = -23.0
offset_top = -88.0
offset_right = 17.0
offset_bottom = -48.0

[node name="Key_5" type="Label" parent="but_2"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "2
"

[node name="but_3" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = -88.0
offset_right = 48.0
offset_bottom = -48.0

[node name="Key_5" type="Label" parent="but_3"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "3"

[node name="but_4" type="TextureButton" parent="."]
offset_left = -54.0
offset_top = -63.0
offset_right = -14.0
offset_bottom = -23.0

[node name="Key_5" type="Label" parent="but_4"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "4
"

[node name="but_5" type="TextureButton" parent="."]
offset_left = -24.0
offset_top = -63.0
offset_right = 16.0
offset_bottom = -23.0

[node name="Key_5" type="Label" parent="but_5"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "5
"

[node name="but_6" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = -63.0
offset_right = 48.0
offset_bottom = -23.0

[node name="Key_5" type="Label" parent="but_6"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "6
"

[node name="but_8" type="TextureButton" parent="."]
offset_left = -24.0
offset_top = -40.0
offset_right = 16.0

[node name="Key_5" type="Label" parent="but_8"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "8
"

[node name="but_7" type="TextureButton" parent="."]
offset_left = -54.0
offset_top = -40.0
offset_right = -14.0

[node name="Key_5" type="Label" parent="but_7"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "7
"

[node name="but_9" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = -40.0
offset_right = 48.0

[node name="Key_5" type="Label" parent="but_9"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "9
"

[node name="but_10" type="TextureButton" parent="."]
offset_left = -24.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = 21.0

[node name="Key_5" type="Label" parent="but_10"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "0
"

[node name="but_Del" type="TextureButton" parent="."]
offset_left = -54.0
offset_top = -16.0
offset_right = -14.0
offset_bottom = 24.0

[node name="Key_5" type="Label" parent="but_Del"]
offset_left = 5.0
offset_top = 4.0
offset_right = 45.0
offset_bottom = 27.0
text = "Del
"

[node name="but_0" type="TextureButton" parent="."]
offset_left = -55.0
offset_top = -88.0
offset_right = -15.0
offset_bottom = -48.0

[node name="Key_5" type="Label" parent="but_0"]
offset_left = 15.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
text = "1
"

[node name="but_GO" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 24.0

[node name="Key_5" type="Label" parent="but_GO"]
offset_left = 9.0
offset_top = 7.0
offset_right = 49.0
offset_bottom = 30.0
text = "Go
"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="pressed" from="but_2" to="." method="_on_but_2_pressed"]
[connection signal="pressed" from="but_3" to="." method="_on_but_3_pressed"]
[connection signal="pressed" from="but_4" to="." method="_on_but_4_pressed"]
[connection signal="pressed" from="but_5" to="." method="_on_but_5_pressed"]
[connection signal="pressed" from="but_6" to="." method="_on_but_6_pressed"]
[connection signal="pressed" from="but_8" to="." method="_on_but_8_pressed"]
[connection signal="pressed" from="but_7" to="." method="_on_but_7_pressed"]
[connection signal="pressed" from="but_9" to="." method="_on_but_9_pressed"]
[connection signal="pressed" from="but_10" to="." method="_on_but_10_pressed"]
[connection signal="pressed" from="but_Del" to="." method="_on_but_del_pressed"]
[connection signal="pressed" from="but_0" to="." method="_on_but_0_pressed"]
[connection signal="pressed" from="but_GO" to="." method="_on_but_go_pressed"]
